--- a/app/components/elements/Home/SearchBar/SearchBar.module.scss
+++ b/app/components/elements/Home/SearchBar/SearchBar.module.scss
@@ -1,6 +1,7 @@
 @import "assets/styles/variables";
 
 .section {
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -28,5 +29,6 @@
     color: $white;
     text-align: center;
     padding: 3rem 0;
+    font-size: 1.7em;
   }
 }
