--- a/app/components/elements/Filters/Filters.module.scss
+++ b/app/components/elements/Filters/Filters.module.scss
@@ -1,1 +1,29 @@
+@import './assets/styles/variables';
 
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  > button {
+    min-width: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    border: 2px solid rgba($gray, 0.2);
+    margin-right: 0.6rem;
+    margin-bottom: 0.5rem;
+    padding: 0.6rem 1rem;
+    transition: border 0.4s ease;
+    color: $white;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &.active {
+      border-color: rgba($accent, 0.5);
+    }
+  }
+}
